Sketch out some more biome gen + update forge version for mixin fixes

--- a/Forge/build.gradle
+++ b/Forge/build.gradle
@@ -5,20 +5,38 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-//        classpath group: "org.spongepowered", name: "mixingradle", version: "0.7-SNAPSHOT", changing: true
+        classpath group: "org.spongepowered", name: "mixingradle", version: "0.7-SNAPSHOT", changing: true
         classpath group: "net.minecraftforge.gradle", name: "ForgeGradle", version: "5.1.+", changing: true
     }
 }
 
 apply plugin: "net.minecraftforge.gradle"
-//apply plugin: "org.spongepowered.mixin"
+apply plugin: "org.spongepowered.mixin"
 apply plugin: "eclipse"
+
+java.toolchain.languageVersion = JavaLanguageVersion.of(17)
+
+repositories {
+    maven { url "https://repo.spongepowered.org/maven" }
+    maven { url = "https://maven.fabricmc.net/" }
+}
+
+dependencies {
+    minecraft "net.minecraftforge:forge:1.18-${forge_version}"
+    implementation rootProject
+}
+
+jar {
+    archivesBaseName = archives_base_name
+    archiveClassifier.set(project.name.toLowerCase())
+    finalizedBy("reobfJar")
+}
 
 minecraft {
     mappings channel: "official", version: minecraft_version
     runs {
         client {
-            workingDirectory project.file("run/cient")
+            workingDirectory project.file("run-client")
             property "forge.logging.markers", "REGISTRIES"
             property "forge.logging.console.level", "debug"
             arg "-mixin.config=terraforged.mixins.json"
@@ -30,7 +48,7 @@ minecraft {
         }
 
         server {
-            workingDirectory project.file("run/server")
+            workingDirectory project.file("run-server")
             property "forge.logging.markers", "REGISTRIES"
             property "forge.logging.console.level", "debug"
             arg "-mixin.config=terraforged.mixins.json"
@@ -40,38 +58,9 @@ minecraft {
                 }
             }
         }
-
-        data {
-            workingDirectory project.file("run/data")
-            property "forge.logging.markers", "REGISTRIES"
-            property "forge.logging.console.level", "debug"
-            args "--mod", "examplemod", "--all", "--output", file("src/generated/resources/"), "--existing", file("src/main/resources/")
-            mods {
-                examplemod {
-                    source sourceSets.main
-                }
-            }
-        }
     }
 }
 
-repositories {
-    maven { url "https://repo.spongepowered.org/maven" }
-    maven { url = "https://maven.fabricmc.net/" }
-}
-
-dependencies {
-    minecraft "net.minecraftforge:forge:1.18-${forge_version}"
-    implementation rootProject
-//    implementation "org.spongepowered:mixin:0.8.4"
-}
-
-//mixin {
-//    add sourceSets.main, "mixin.terraforged.refmap.json"
-//}
-
-jar {
-    archivesBaseName = archives_base_name
-    archiveClassifier.set(project.name.toLowerCase())
-    finalizedBy("reobfJar")
+mixin {
+    add sourceSets.main, "mixin.terraforged.refmap.json"
 }
