--- a/Fabric/build.gradle
+++ b/Fabric/build.gradle
@@ -26,13 +26,13 @@ loom {
 			client()
 			setConfigName("Fabric Client")
 			ideConfigGenerated(true)
-			runDir("run")
+			runDir("run-client")
 		}
 		server {
 			server()
 			setConfigName("Fabric Server")
 			ideConfigGenerated(true)
-			runDir("run")
+			runDir("run-server")
 		}
 	}
 }
