--- a/Fabric/build.gradle
+++ b/Fabric/build.gradle
@@ -1,13 +1,18 @@
 plugins {
 	id 'fabric-loom' version '0.10-SNAPSHOT'
+	id 'java'
+}
+
+apply from: file("../common.gradle")
+
+sourceSets {
+	main.java { srcDirs += "../src/main/java" }
+	main.resources { srcDirs += "../src/main/resources" }
 }
 
 dependencies {
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings loom.officialMojangMappings()
-
-	implementation rootProject
-
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 }
@@ -21,27 +26,24 @@ processResources {
 }
 
 loom {
+	mixin.defaultRefmapName = "terraforged.mixins.refmap.json"
+
 	runs {
 		client {
 			client()
 			setConfigName("Fabric Client")
 			ideConfigGenerated(true)
-			runDir("run-client")
+			runDir("run")
 		}
 		server {
 			server()
 			setConfigName("Fabric Server")
 			ideConfigGenerated(true)
-			runDir("run-server")
+			runDir("run")
 		}
 	}
 }
 
 tasks.withType(JavaCompile).configureEach {
 	it.options.release = 17
-}
-
-jar {
-	archivesBaseName = archives_base_name
-	archiveClassifier.set(project.name.toLowerCase())
 }
