--- a/Fabric/gradle.properties
+++ b/Fabric/gradle.properties
@@ -8,5 +8,6 @@ mod_version = 0.3.0
 mod_group = com.terraforged
 archives_base_name = TerraForged
 
-# Forge
-forge_version = 38.0.6
+# Fabric
+loader_version=0.12.6
+fabric_version=0.43.1+1.18
