Implemented builtin registry injection and added jvm args for fabric run config

--- a/Fabric/build.gradle
+++ b/Fabric/build.gradle
@@ -34,12 +34,14 @@ loom {
 			setConfigName("Fabric Client")
 			ideConfigGenerated(true)
 			runDir("run")
+			vmArgs "-Ddev"
 		}
 		server {
 			server()
 			setConfigName("Fabric Server")
 			ideConfigGenerated(true)
 			runDir("run")
+			vmArgs "-Ddev"
 		}
 	}
 }
