Add "fabric" to jar name & made dumb buildscript

--- a/Fabric/build.gradle
+++ b/Fabric/build.gradle
@@ -25,6 +25,10 @@ processResources {
 	}
 }
 
+jar {
+	archivesBaseName = "${archives_base_name}-fabric-${minecraft_version}"
+}
+
 loom {
 	mixin.defaultRefmapName = "terraforged.mixins.refmap.json"
 
