Only show overlay text in TF overworld. Added datagen handler. Updated buildscripts

--- a/Fabric/build.gradle
+++ b/Fabric/build.gradle
@@ -26,7 +26,7 @@ processResources {
 }
 
 jar {
-	archivesBaseName = "${archives_base_name}-fabric-${minecraft_version}"
+	archivesBaseName = "${archives_base_name}-fabric-${project.minecraft_version}"
 }
 
 loom {
