--- a/common.gradle
+++ b/common.gradle
@@ -1,7 +1,17 @@
+project.ext.minecraft_version = "1.18.1"
+project.ext.mod_version = "0.3.0"
+project.ext.mod_classifier = "-alpha-1"
+project.ext.mod_group = "com.terraforged"
+project.ext.archives_base_name = "TerraForged"
+
 group = mod_group
-version = mod_version + "-alpha"
+version = mod_version + mod_classifier
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
+
+sourceSets {
+    main.resources { srcDirs += "/generated/resources" }
+}
 
 configurations {
     library
