Initial port to 1.18.2

--- a/Fabric/build.gradle
+++ b/Fabric/build.gradle
@@ -8,6 +8,7 @@ apply from: file("../common.gradle")
 sourceSets {
 	main.java { srcDirs += "../src/main/java" }
 	main.resources { srcDirs += "../src/main/resources" }
+	main.resources { srcDirs += "../generated/resources" }
 }
 
 dependencies {
