--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 mod_version=0.2.16
-mod_classifier=BETA-2
+mod_classifier=
 dev_version=
 
-forge_version=36.1.4
+forge_version=36.2.39
 minecraft_version=1.16.5
 
 mcp_channel=official
@@ -10,3 +10,4 @@ mcp_version=1.16.5
 
 # Prevents stray gradle processes hanging around chewing up resources
 org.gradle.daemon.idletimeout=0
+org.gradle.jvmargs=-Xmx3G
